<package>
  <name>rover</name>
  <version>0.1.0</version>
  <description>
      A rover drive system.
  </description>
  <maintainer email="johnflux@gmail.com">John Tapsell</maintainer>
  <author email="johnflux@gmail.com">John Tapsell</author>
  <license>Unlicense</license>
  <url type="website">http://johnflux.com</url>
  <url type="repository">https://github.com/johnflux/rover</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
